--- a/README.html
+++ b/README.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2018-08-10 周五 21:27 -->
+<!-- 2018-08-11 周六 10:30 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>SCHEDULE</title>
@@ -229,22 +229,42 @@ for the JavaScript code in this tag.
 </head>
 <body>
 <div id="content">
-<h1 class="title">SCHEDULE</h1>
+<h1 class="title">Data Structures and Algorithms</h1>
 <div id="table-of-contents">
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents">
 <ul>
-<li><a href="#org1080124">1. Set 1: Linear Data Structures <code>[0/4]</code></a>
+<li><a href="#org5e28088">1. Set 1: Linear Data Structures <code>[0/4]</code></a>
 <ul>
-<li><a href="#orgba5a6f9">1.1. <span class="todo TODO">TODO</span> Array</a></li>
-<li><a href="#org0ad7fa4">1.2. <span class="todo TODO">TODO</span> Linked List</a></li>
-<li><a href="#org959dde4">1.3. <span class="todo TODO">TODO</span> Stack</a></li>
-<li><a href="#org9f94631">1.4. <span class="todo TODO">TODO</span> Queue</a></li>
+<li><a href="#org6d5d01a">1.1. <span class="todo TODO">TODO</span> Array</a></li>
+<li><a href="#org8e0d20e">1.2. <span class="todo TODO">TODO</span> Linked List</a></li>
+<li><a href="#org88ac94d">1.3. <span class="todo TODO">TODO</span> Stack</a></li>
+<li><a href="#orgbd7d090">1.4. <span class="todo TODO">TODO</span> Queue</a></li>
 </ul>
 </li>
-<li><a href="#org60df099">2. Set 2: Binary Tree, BST, Heap and Hash <code>[/]</code></a></li>
-<li><a href="#orgbcf0076">3. Set 3: Graph, Trie, Segment Tree and Suffix Tree <code>[/]</code></a></li>
-<li><a href="#org9b33a8f">4. Abstract Data Types <code>[/]</code></a></li>
+<li><a href="#org6b9b399">2. Set 2: Binary Tree, BST, Heap and Hash <code>[0/4]</code></a>
+<ul>
+<li><a href="#org6bb8047">2.1. <span class="todo TODO">TODO</span> Binary Tree</a></li>
+<li><a href="#org501301a">2.2. <span class="todo TODO">TODO</span> Binary Search Tree</a></li>
+<li><a href="#org712ca53">2.3. <span class="todo TODO">TODO</span> Binary Heap</a></li>
+<li><a href="#orga89a648">2.4. <span class="todo TODO">TODO</span> Hashing</a></li>
+</ul>
+</li>
+<li><a href="#org5e09e4e">3. Set 3: Graph, Trie, Segment Tree and Suffix Tree <code>[0/4]</code></a>
+<ul>
+<li><a href="#org9dca5eb">3.1. <span class="todo TODO">TODO</span> Graph</a></li>
+<li><a href="#org5f75fad">3.2. <span class="todo TODO">TODO</span> Trie</a></li>
+<li><a href="#orgb1b1f69">3.3. <span class="todo TODO">TODO</span> Segment Tree</a></li>
+<li><a href="#org6d33ab9">3.4. <span class="todo TODO">TODO</span> Suffix Tree</a></li>
+</ul>
+</li>
+<li><a href="#org0e72b6f">4. Abstract Data Types <code>[0/3]</code></a>
+<ul>
+<li><a href="#org6543293">4.1. <span class="todo TODO">TODO</span> List ADT</a></li>
+<li><a href="#org727ae12">4.2. <span class="todo TODO">TODO</span> Stack ADT</a></li>
+<li><a href="#org3af6ee7">4.3. <span class="todo TODO">TODO</span> Queue ADT</a></li>
+</ul>
+</li>
 </ul>
 </div>
 </div>
@@ -257,43 +277,81 @@ Learn data structures and algorithms from <a href="https://www.geeksforgeeks.org
 <dt>C Primer Plus 6e</dt><dd>Stephen Prata, 2013, Addison-Wesley Professional</dd>
 </dl>
 
-<div id="outline-container-org1080124" class="outline-2">
-<h2 id="org1080124"><span class="section-number-2">1</span> Set 1: Linear Data Structures <code>[0/4]</code></h2>
+<div id="outline-container-org5e28088" class="outline-2">
+<h2 id="org5e28088"><span class="section-number-2">1</span> Set 1: Linear Data Structures <code>[0/4]</code></h2>
 <div class="outline-text-2" id="text-1">
 </div>
-<div id="outline-container-orgba5a6f9" class="outline-3">
-<h3 id="orgba5a6f9"><span class="section-number-3">1.1</span> <span class="todo TODO">TODO</span> Array</h3>
+<div id="outline-container-org6d5d01a" class="outline-3">
+<h3 id="org6d5d01a"><span class="section-number-3">1.1</span> <span class="todo TODO">TODO</span> Array</h3>
 </div>
 
-<div id="outline-container-org0ad7fa4" class="outline-3">
-<h3 id="org0ad7fa4"><span class="section-number-3">1.2</span> <span class="todo TODO">TODO</span> Linked List</h3>
+<div id="outline-container-org8e0d20e" class="outline-3">
+<h3 id="org8e0d20e"><span class="section-number-3">1.2</span> <span class="todo TODO">TODO</span> Linked List</h3>
 </div>
 
-<div id="outline-container-org959dde4" class="outline-3">
-<h3 id="org959dde4"><span class="section-number-3">1.3</span> <span class="todo TODO">TODO</span> Stack</h3>
+<div id="outline-container-org88ac94d" class="outline-3">
+<h3 id="org88ac94d"><span class="section-number-3">1.3</span> <span class="todo TODO">TODO</span> Stack</h3>
 </div>
 
-<div id="outline-container-org9f94631" class="outline-3">
-<h3 id="org9f94631"><span class="section-number-3">1.4</span> <span class="todo TODO">TODO</span> Queue</h3>
+<div id="outline-container-orgbd7d090" class="outline-3">
+<h3 id="orgbd7d090"><span class="section-number-3">1.4</span> <span class="todo TODO">TODO</span> Queue</h3>
 </div>
 </div>
 
-<div id="outline-container-org60df099" class="outline-2">
-<h2 id="org60df099"><span class="section-number-2">2</span> Set 2: Binary Tree, BST, Heap and Hash <code>[/]</code></h2>
+<div id="outline-container-org6b9b399" class="outline-2">
+<h2 id="org6b9b399"><span class="section-number-2">2</span> Set 2: Binary Tree, BST, Heap and Hash <code>[0/4]</code></h2>
+<div class="outline-text-2" id="text-2">
 </div>
-
-<div id="outline-container-orgbcf0076" class="outline-2">
-<h2 id="orgbcf0076"><span class="section-number-2">3</span> Set 3: Graph, Trie, Segment Tree and Suffix Tree <code>[/]</code></h2>
+<div id="outline-container-org6bb8047" class="outline-3">
+<h3 id="org6bb8047"><span class="section-number-3">2.1</span> <span class="todo TODO">TODO</span> Binary Tree</h3>
 </div>
-
-<div id="outline-container-org9b33a8f" class="outline-2">
-<h2 id="org9b33a8f"><span class="section-number-2">4</span> Abstract Data Types <code>[/]</code></h2>
+<div id="outline-container-org501301a" class="outline-3">
+<h3 id="org501301a"><span class="section-number-3">2.2</span> <span class="todo TODO">TODO</span> Binary Search Tree</h3>
+</div>
+<div id="outline-container-org712ca53" class="outline-3">
+<h3 id="org712ca53"><span class="section-number-3">2.3</span> <span class="todo TODO">TODO</span> Binary Heap</h3>
+</div>
+<div id="outline-container-orga89a648" class="outline-3">
+<h3 id="orga89a648"><span class="section-number-3">2.4</span> <span class="todo TODO">TODO</span> Hashing</h3>
+</div>
+</div>
+<div id="outline-container-org5e09e4e" class="outline-2">
+<h2 id="org5e09e4e"><span class="section-number-2">3</span> Set 3: Graph, Trie, Segment Tree and Suffix Tree <code>[0/4]</code></h2>
+<div class="outline-text-2" id="text-3">
+</div>
+<div id="outline-container-org9dca5eb" class="outline-3">
+<h3 id="org9dca5eb"><span class="section-number-3">3.1</span> <span class="todo TODO">TODO</span> Graph</h3>
+</div>
+<div id="outline-container-org5f75fad" class="outline-3">
+<h3 id="org5f75fad"><span class="section-number-3">3.2</span> <span class="todo TODO">TODO</span> Trie</h3>
+</div>
+<div id="outline-container-orgb1b1f69" class="outline-3">
+<h3 id="orgb1b1f69"><span class="section-number-3">3.3</span> <span class="todo TODO">TODO</span> Segment Tree</h3>
+</div>
+<div id="outline-container-org6d33ab9" class="outline-3">
+<h3 id="org6d33ab9"><span class="section-number-3">3.4</span> <span class="todo TODO">TODO</span> Suffix Tree</h3>
+</div>
+</div>
+<div id="outline-container-org0e72b6f" class="outline-2">
+<h2 id="org0e72b6f"><span class="section-number-2">4</span> Abstract Data Types <code>[0/3]</code></h2>
+<div class="outline-text-2" id="text-4">
+</div>
+<div id="outline-container-org6543293" class="outline-3">
+<h3 id="org6543293"><span class="section-number-3">4.1</span> <span class="todo TODO">TODO</span> List ADT</h3>
+</div>
+<div id="outline-container-org727ae12" class="outline-3">
+<h3 id="org727ae12"><span class="section-number-3">4.2</span> <span class="todo TODO">TODO</span> Stack ADT</h3>
+</div>
+<div id="outline-container-org3af6ee7" class="outline-3">
+<h3 id="org3af6ee7"><span class="section-number-3">4.3</span> <span class="todo TODO">TODO</span> Queue ADT</h3>
+</div>
 </div>
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: Rookie</p>
 <p class="email">Email: <a href="mailto:10154508169@stu.ecnu.edu.cn">10154508169@stu.ecnu.edu.cn</a></p>
-<p class="date">Created: 2018-08-10 周五 21:27</p>
+<p class="date">Created: 2018-08-11 周六 10:30</p>
+<p class="creator"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 26.1 (<a href="https://orgmode.org">Org</a> mode 9.1.13)</p>
 <p class="validation"></p>
 </div>
 </body>
