--- a/README.html
+++ b/README.html
@@ -229,7 +229,7 @@ for the JavaScript code in this tag.
 </head>
 <body>
 <div id="content">
-<h1 class="title">Data Structures and Algorithms</h1>
+<h1 class="title">SCHEDULE</h1>
 <div id="table-of-contents">
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents">
